frontend/test/should_fail/model_init_001.grg
using model_init1;

rule r1 {

	replace {
		a : A;
		eval {
			a.i1 = a.i1*2;
		}
	}
}

